--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-src/components/Login/firebaseConfig.js
+src/components/Login/.firebaseConfig.js
 
 # testing
 /coverage
